deps/v8/test/message/fail/export-duplicate-default.out
# Copyright 2015 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:7: SyntaxError: Duplicate export of 'default'
export default class C {};
       ^^^^^^^
SyntaxError: Duplicate export of 'default'
